--- a/views/html/login.html
+++ b/views/html/login.html
@@ -7,12 +7,22 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id = "home">
-        <div class = "landing-text">
-            <h1>Don't know what to eat?</h1>
-            <h3>We can fix that.</h3>
-            <a href="#" class ="btn btn-default btn-lg">Get Started</a>
+    <form>
+        <h1>Login</h1>
+        <div class="container">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="username" required>
+            <br>
+            <label for="password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="pswd" required>
+            <br>
+            <input type="button" value="submit">
         </div>
+    </form>
+    <div class="container">
+        <body>
+            <a href="register.html">Register</a>
+        </body>
     </div>
 </body>
 </html>
