--- a/views/html/login.html
+++ b/views/html/login.html
@@ -16,12 +16,12 @@
             <label for="password"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="pswd" required>
             <br>
-            <input type="button" value="submit">
+            <input type="button" value="sign in">
         </div>
     </form>
     <div class="container">
         <body>
-            <a href="register.html">Register</a>
+            <p>New User? <a href="register.html">Create and account.</a></p>
         </body>
     </div>
 </body>
