--- a/views/html/login.html
+++ b/views/html/login.html
@@ -7,22 +7,32 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form>
-        <h1>Login</h1>
-        <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" required>
-            <br>
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="pswd" required>
-            <br>
-            <input type="button" value="sign in">
+    <div class="container h-100">
+        <div class="d-flex justify-content-center h-100">
+            <div class="user_card">
+                <div class="card-header">
+                    <h2>Login</h2>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="container">
+                            <label for="uname"><b>Username</b></label>
+                            <input type="text" placeholder="Enter Username" name="username" required>
+                            <br>
+                            <label for="password"><b>Password</b></label>
+                            <input type="password" placeholder="Enter Password" name="pswd" required>
+                            <br>
+                            <input type="button" value="sign in">
+                        </div>
+                    </form>
+                </div>
+                <div class="container_new_user">
+                    <body>
+                        <p>New User? <a href="register.html">Create and account.</a></p>
+                    </body>
+                </div>
+            </div>
         </div>
-    </form>
-    <div class="container">
-        <body>
-            <p>New User? <a href="register.html">Create and account.</a></p>
-        </body>
     </div>
 </body>
 </html>
