--- a/views/html/login.html
+++ b/views/html/login.html
@@ -7,29 +7,31 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container h-100">
+    <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="user_card">
                 <div class="card-header">
-                    <h2>Login</h2>
+                    <h3>Login</h3>
                 </div>
                 <div class="card-body">
                     <form>
-                        <div class="container">
-                            <label for="uname"><b>Username</b></label>
-                            <input type="text" placeholder="Enter Username" name="username" required>
-                            <br>
-                            <label for="password"><b>Password</b></label>
-                            <input type="password" placeholder="Enter Password" name="pswd" required>
-                            <br>
-                            <input type="button" value="sign in">
+                        <div class="input-group form-group">
+                            <input type="text" placeholder="Enter Username" name="username" class="form-control" required>
+                        </div>
+                        <div class="input-group mt-1 form-group">
+                            <input type="password" placeholder="Enter Password" name="password" class="form-control" required>
+                        </div>
+                        <div class="d-flex justify-content-center mt-3 login_container">    
+                            <input type="submit" value="Sign In" class="btn login_btn">
                         </div>
                     </form>
                 </div>
-                <div class="container_new_user">
-                    <body>
-                        <p>New User? <a href="register.html">Create and account.</a></p>
-                    </body>
+                <div class="user_card_footer">
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-center links">
+                            New User? <a href="register.html" class="ml-2">Create an account.</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
