--- a/views/html/index.html
+++ b/views/html/index.html
@@ -16,7 +16,8 @@
             <hr class="my-4">
             <p>We can fix that. Click below to get started</p>
             <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+              <a class="btn btn-primary btn-lg" href="login.html" role="button">Login</a>
+              <a class="btn btn-primary btn-lg" href="register.html" role="button">Register</a>
             </p>
           </div>
         </div>
