--- a/views/html/register.html
+++ b/views/html/register.html
@@ -7,25 +7,40 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form>
-        <h1>Register your account</h1>
-        <div class="container">
-            <label for="name"><b>Name</b></label>
-            <input type="text" placeholder="Enter your full name..." name="username" required>
-            <br>
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter a username..." name="username" required>
-            <br>
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter your password..." name="password" required>
-            <br>
-            <label for="cpassword"><b>Confirm Password</b></label>
-            <input type="password" placeholder="Enter your password again..." name="confirm" required>
-            <br>
-            <input type="button" value="register">
-            <br>
-            <p>Already have an account? <a href="login.html">sign in</a></p>
+    <div class="container">
+        <div class="d-flex justify-content-center h-100">
+            <div class="user_card">
+                <div class="card-header">
+                    <h3>Register</h3>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="input-group form-group">
+                            <input type="text" placeholder="Enter your full name..." name="username" class="form-control" required>
+                        </div>
+                        <div class="input-group mt-1 form-group">
+                            <input type="text" placeholder="Enter a username..." name="username" class="form-control" required>
+                        </div>
+                        <div class="input-group mt-1 form-group">
+                            <input type="password" placeholder="Enter your password..." name="password" class="form-control" required>
+                        </div>
+                        <div class="input-group mt-1 form-group">
+                            <input type="password" placeholder="Enter your password again..." name="password" class="form-control" required>
+                        </div>
+                        <div class="d-flex justify-content-center mt-3 login_container">    
+                            <input type="submit" value="Create Account" class="btn register_btn">
+                        </div>
+                    </form>
+                </div>
+                <div class="user_card_footer">
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-center links">
+                            Already have an account? <a href="login.html" class="ml-2">Login.</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </form>
+    </div>
 </body>
 </html>
